--- a/triumph.html
+++ b/triumph.html
@@ -52,8 +52,11 @@
             foster audience connection.</p>
           <dl>
             <dt>My Role</dt>
-            <dd>As the research assistant to Dr. Julien Mirivel, I co-developed and co-facilitated the workshop sessions, including 
-            <ul>
+            <dd>As the research assistant to Dr. Julien Mirivel, I co-developed and co-facilitated the workshop 
+                sessions, including
+            </dd>
+          </dl>
+                <ul>
                 <li>Conception of the training content,</li>
                 <li>Developed materials such as graphic designs, interactive training workbooks, presentation 
                 slides, and training videos,</li>
@@ -62,16 +65,12 @@
                 post-training surveys and performance evaluations.</li>
             </ul>
             Additionally, I developed graphic designs for the Positive Communication Network.
-            </dd>
-          </dl>
           <p><a href="https://tri.uams.edu/news/from-jitters-to-confidence-k12-scholars-learn-to-engage-real%E2%80%91world-audiences/"
              target="blank">Read the UAMS article here</a>.</p>
-            <p><a href="#guardianship"><em>Managing Public Speaking Anxiety</em></a>View one of the training 
-                videos for the program.</p>              
+            <p><a href="#guardianship">View one of the training 
+                videos for the program.</a></p>              
           <p><a href="assets/documents/speaking-positively-workbook.pdf">View the Session I Workbook</a>.</p>
           <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/building-leadership-resilience.jpg" alt="a model of Dr. Julien Mirivels framework for
-            building reslience through positive communication. ">
             <img src="assets/images/poscom-network-event.png" alt="a model of Dr. Julien Mirivels framework for
             building reslience through positive communication. ">
           </div>
@@ -79,6 +78,8 @@
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
+          <img src="assets/images/building-leadership-resilience.jpg" alt="a model of Dr. Julien Mirivels framework for
+            building reslience through positive communication. ">
         </div>
       </div>
     </article>
