--- a/triumph.html
+++ b/triumph.html
@@ -78,9 +78,11 @@
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
+        </div>
+        <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/building-leadership-resilience.jpg" alt="a model of Dr. Julien Mirivels framework for
             building reslience through positive communication. ">
-        </div>
+         </div>         
       </div>
     </article>
 
@@ -99,9 +101,7 @@
     <div class="credits">
       <h2>CREDITS</h2>
       <ul>
-          <li>Copywriter: Lillian McNeely</li>
-          <li>Lead Designer: Nicholas Corn</li>
-          <li>Developers: C.S.S. (Certified Success Squad)</li>
+          <li>Program Facilitator and Founder of Positive Communication Network: Dr. Julien Mirivel</li>
       </ul>
   </div>
 </div>
