--- a/triumph.html
+++ b/triumph.html
@@ -70,20 +70,26 @@
             <p><a href="#guardianship">View one of the training 
                 videos for the program.</a></p>              
           <p><a href="assets/documents/speaking-positively-workbook.pdf">View the Session I Workbook</a>.</p>
-          <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/poscom-network-event.png" alt="a model of Dr. Julien Mirivels framework for
-            building reslience through positive communication. ">
-          </div>
         </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
-        <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/building-leadership-resilience.jpg" alt="a model of Dr. Julien Mirivels framework for
-            building reslience through positive communication. ">
-         </div>         
+   
       </div>
+    </article>
+
+    <article class="article-2">
+            <div class="wrap scroll-reveal box tag">
+            <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
+            with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
+            others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
+            Network.">
+          </div>
+           <div class="d-none d-lg-block col-lg scroll-reveal box tag">
+          <img src="assets/images/poscom-network-event.png" alt="building reslience through positive communication is a
+          six step framework by professor Julien Mirivel from the University of Arkansas at Little Rock">
+        </div>
     </article>
 
     <!--VIDEO OF Managing Anxiety-->
