--- a/triumph.html
+++ b/triumph.html
@@ -46,7 +46,8 @@
         <div class="col-lg-6">
           <h1>UALR TRIumph Pilot Program 2024 - 2025</h1>
           <p>A collaborative workshop series between UALR and UAMS in which UAMS research scholars completed the 
-            TRIumph training course to develop their public speaking skills. The course was led by Julien Mirivel, 
+            <a href="https://tri.uams.edu/news/from-jitters-to-confidence-k12-scholars-learn-to-engage-real%E2%80%91world-audiences/"
+             target="blank">TRIumph training course</a> to develop their public speaking skills. The course was led by Julien Mirivel, 
             Ph.D., from the University of Arkansas at Little Rock, and focused on how presenters organize material
             and present their research using delivery techniques such as voice, eye contact, and movement that 
             foster audience connection.</p>
@@ -65,11 +66,12 @@
                 post-training surveys and performance evaluations.</li>
             </ul>
             Additionally, I developed graphic designs for the Positive Communication Network.
-          <p><a href="https://tri.uams.edu/news/from-jitters-to-confidence-k12-scholars-learn-to-engage-real%E2%80%91world-audiences/"
-             target="blank">Read the UAMS article here</a>.</p>
-            <p><a href="#guardianship">View one of the training 
-                videos for the program.</a></p>              
-          <p><a href="assets/documents/speaking-positively-workbook.pdf">View the Session I Workbook</a>.</p>
+            <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
+            <p><a href="#anxiety">View one of the training videos</a>.</p>
+            <div class="wrap scroll-reveal box tag">
+                <img src="assets/images/building-leadership-resilience.jpg" alt="building reslience through positive communication is a
+          six step framework by professor Julien Mirivel from the University of Arkansas at Little Rock.">
+          </div>              
         </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
           <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
@@ -86,10 +88,6 @@
             others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
             Network.">
           </div>
-           <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/poscom-network-event.png" alt="building reslience through positive communication is a
-          six step framework by professor Julien Mirivel from the University of Arkansas at Little Rock">
-        </div>
     </article>
 
     <!--VIDEO OF Managing Anxiety-->
@@ -97,7 +95,7 @@
         <div class="row">
           <div class="col">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe id="cause" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/MUWIUgozSvY?si=Ms8bWH6c1MGZfMYd" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
+              <iframe id="anxiety" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/MUWIUgozSvY?si=Ms8bWH6c1MGZfMYd" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
             </div>
           </div>
       </div>
