--- a/triumph.html
+++ b/triumph.html
@@ -57,7 +57,7 @@
                 sessions, including
             </dd>
           </dl>
-                <ul>
+                <ul class="exempt">
                 <li>Conception of the training content,</li>
                 <li>Developed materials such as graphic designs, interactive training workbooks, presentation 
                 slides, and training videos,</li>
@@ -74,7 +74,7 @@
           </div>              
         </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="mobile" alt="workbook coverpage titled speaking positively,
+          <img src="assets/images/workbook.jpg" class="feature" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
    
@@ -82,11 +82,19 @@
     </article>
 
     <article class="article-2">
+              <div class="row gy-5 gx-5 align-items-start justify-content-between">
+        <div class="col-lg-6">
             <div class="wrap scroll-reveal box tag">
             <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
             with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
             others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
             Network.">
+          </div>
+          <div class="d-none d-lg-block col-lg scroll-reveal box tag">
+          <img src="assets/images/workbook.jpg" class="feature" alt="workbook coverpage titled speaking positively,
+          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
+        </div>
+          </div>
           </div>
     </article>
 
