--- a/triumph.html
+++ b/triumph.html
@@ -74,7 +74,7 @@
           </div>              
         </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="feature" alt="workbook coverpage titled speaking positively,
+          <img src="assets/images/workbook.jpg" class="shadow" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
    
@@ -90,11 +90,11 @@
             others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
             Network.">
           </div>
-          <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="feature" alt="workbook coverpage titled speaking positively,
-          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
-        </div>
           </div>
+           <div class="d-none d-lg-block col-lg scroll-reveal box tag">
+            <img src="assets/images/building-leadership-resilience.jpg" class="shadow" alt="workbook coverpage titled speaking positively,
+          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
+            </div>         
           </div>
     </article>
 
