--- a/triumph.html
+++ b/triumph.html
@@ -67,14 +67,9 @@
             </ul>
             Additionally, I developed graphic designs for the Positive Communication Network.
             <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
-            <p><a href="#anxiety">View one of the training videos</a>.</p>
-            <div class="wrap scroll-reveal box tag">
-                <img src="assets/images/building-leadership-resilience.jpg" alt="building reslience through positive communication is a
-          six step framework by professor Julien Mirivel from the University of Arkansas at Little Rock.">
-          </div>              
-        </div>
+           </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="shadow" alt="workbook coverpage titled speaking positively,
+          <img src="assets/images/workbook.jpg" class="shadow mobile" alt="workbook cover page titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
    
@@ -91,24 +86,12 @@
             Network.">
           </div>
           </div>
-           <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-            <img src="assets/images/building-leadership-resilience.jpg" class="shadow" alt="workbook coverpage titled speaking positively,
+           <div class="wrap d-none d-lg-block col-lg scroll-reveal box tag">
+            <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
             </div>         
           </div>
     </article>
-
-    <!--VIDEO OF Managing Anxiety-->
-      <article class="article-2">
-        <div class="row">
-          <div class="col">
-            <div class="embed-responsive embed-responsive-16by9">
-              <iframe id="anxiety" class="embed-responsive-item youtube" src="https://www.youtube.com/embed/MUWIUgozSvY?si=Ms8bWH6c1MGZfMYd" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>          
-            </div>
-          </div>
-      </div>
-      </article>
-    </section>
 
     <div class="credits">
       <h2>CREDITS</h2>
