--- a/campaign.html
+++ b/campaign.html
@@ -34,22 +34,27 @@
     <div class="container">
       <div class="row feature fade-in-image">
         <div class="col-md">
-          <img src="assets/images/technical-doc.webp" alt="abstract illustration of a grey background with blue and black diagonal lines">
+          <img src="assets/images/smc-cover-image.jpg" alt="abstract illustration of a grey background with blue and black diagonal lines">
         </div>
       </div>
     <section class="info">
       <article class="article-1">
         <div class="row justify-content-between">
             <div class="col-md-5">
-              <h1>ADOBE XD & WORDPRESS GUIDE 2022</h1>
-              <p>Not everyone is familiar with Adobe XD or Wordpress, and creating a prototype & website
-    means little if our client doesn't know how to use the application. So I created a short instructional document on
-    how to view a website prototype through Adobe XD, and a short quide on how to use certain features within WordPress.</p>
-              <p><a href="assets/documents/viewing-your-prototype.pdf">View the Adobe XD document</a>.</p>
-              <p><a href="assets/documents/wordpress-guide.pdf">View the WordPress Guide</a>.</p>
+              <h1>PR Campaign Strategic Plan 2025</h1>
+              <p>A comprehensive and complex strategic communication plan for the School of Mass Communication 
+                (SMC) at UALR as part of the UALR MCOM 4382 capstone course. The campaign was developed to help 
+                the SMC increase student enrollment in its graduate program.</p>
+                <dl>
+            <dt>My Role</dt>
+            <dd>As the PR Director, my role was to create, lead, and 
+                oversee the development of the strategic plan and manage internal communications. 
+            </dd>
+          </dl>
+              <p><a href="assets/documents/smc-strategic-plan.pdf">View the strategic plan</a>.</p>
             </div>
-            <div class="col-md-4 scroll-reveal box tag">
-              <img src="assets/images/xd.50.png" alt="cover page of the viewing your prototype document">
+            <div class=" wrap col-md-4 scroll-reveal box tag">
+              <img src="assets/images/smc-plan-title-page.jpg" alt="cover page of the SMC strategic plan document">
             </div>
         </div>
       </article>
@@ -57,7 +62,7 @@
     <div class="credits">
       <h2>CREDITS</h2>
       <ul>
-          <li>Copywriters, <em>WordPress Guide</em>: Michael Gray & Victoria Wells</li>
+          <li>Copywriters and researchers: UALR PR Campaigns Course MCOM 4382</li>
       </ul>
     </div>
 <!--Image of prototype to the right of text-->
