--- a/campaign.html
+++ b/campaign.html
@@ -34,7 +34,7 @@
     <div class="container">
       <div class="row feature fade-in-image">
         <div class="col-md">
-          <img src="assets/images/smc-cover-image.jpg" alt="abstract illustration of a grey background with blue and black diagonal lines">
+          <img src="assets/images/smc-cover.jpg" alt="abstract illustration of a grey background with blue and black diagonal lines">
         </div>
       </div>
     <section class="info">
@@ -52,6 +52,9 @@
             </dd>
           </dl>
               <p><a href="assets/documents/smc-strategic-plan.pdf">View the strategic plan</a>.</p>
+              <div class="wrap scroll-reveal box tag">
+            <img src="assets/images/timeline.jpg" alt="woman canoeing on the buffalo river in arkansas">
+          </div>
             </div>
             <div class=" wrap col-md-4 scroll-reveal box tag">
               <img src="assets/images/smc-plan-title-page.jpg" alt="cover page of the SMC strategic plan document">
