--- a/triumph.html
+++ b/triumph.html
@@ -55,8 +55,6 @@
             <dt>My Role</dt>
             <dd>As the research assistant to Dr. Julien Mirivel, I co-developed and co-facilitated the workshop 
                 sessions, including
-            </dd>
-          </dl>
                 <ul class="exempt">
                 <li>Conception of the training content,</li>
                 <li>Developed materials such as graphic designs, interactive training workbooks, presentation 
@@ -64,12 +62,21 @@
                 <li>Co-facilitated the in-person workshops</li>
                 <li>Tracked and measured TRIumph’s impact after each workshop session using pre- and 
                 post-training surveys and performance evaluations.</li>
-            </ul>
+                </ul>
+            </dd>
+          </dl>
+                
             Additionally, I developed graphic designs for the Positive Communication Network.
             <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
+            <div class="wrap scroll-reveal box tag">
+            <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
+            with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
+            others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
+            Network.">
+          </div>
            </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="shadow mobile" alt="workbook cover page titled speaking positively,
+          <img src="assets/images/workbook.jpg" class="shadow" alt="workbook cover page titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
    
@@ -78,14 +85,6 @@
 
     <article class="article-2">
               <div class="row gy-5 gx-5 align-items-start justify-content-between">
-        <div class="col-lg-6">
-            <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
-            with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
-            others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
-            Network.">
-          </div>
-          </div>
            <div class="wrap d-none d-lg-block col-lg scroll-reveal box tag">
             <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
