--- a/projects.html
+++ b/projects.html
@@ -123,7 +123,7 @@
               </a>
             </div>
             <div class="col-md text-center scroll-reveal box tag">
-                <a href="web-university-district.html">
+                <a href="campaign.html">
                     <svg version="1.1" id="ud-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                     viewBox="0 0 181.8 136.3" style="enable-background:new 0 0 181.8 136.3;" xml:space="preserve">
                <g>
