--- a/triumph.html
+++ b/triumph.html
@@ -68,15 +68,13 @@
                 
             Additionally, I developed graphic designs for the Positive Communication Network.
             <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
-            <div class="wrap scroll-reveal box tag">
-            <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
-            with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
-            others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
-            Network.">
+             <div class="wrap scroll-reveal box tag">
+            <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
+          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
           </div>
            </div>
         <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-          <img src="assets/images/workbook.jpg" class="shadow" alt="workbook cover page titled speaking positively,
+          <img src="assets/images/workbook.jpg" class="shadow mobile" alt="workbook cover page titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
         </div>
    
@@ -85,9 +83,17 @@
 
     <article class="article-2">
               <div class="row gy-5 gx-5 align-items-start justify-content-between">
+        <div class="col-lg-6">
+            <div class="wrap scroll-reveal box tag">
+            <img src="assets/images/poscom-network-event.png" alt="Building community through loneliness. A dialogue
+            with monika jiang, a community builder dedicated to exploring how loneliness can reconnect us with ourselves,
+            others, and the world. Friday, December 13th, noon to 1:15 pm. Sponsored by the Positive Communication 
+            Network.">
+          </div>
+          </div>
            <div class="wrap d-none d-lg-block col-lg scroll-reveal box tag">
-            <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
-          inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
+            <img src="assets/images/poscom-conference.png" alt="invitation to the Positive Communication Network virtual annual
+            conference March 21, 2025.">
             </div>         
           </div>
     </article>
