--- a/campaign.html
+++ b/campaign.html
@@ -39,8 +39,8 @@
       </div>
     <section class="info">
       <article class="article-1">
-        <div class="row justify-content-between">
-            <div class="col-md-5">
+      <div class="row gy-5 gx-5 align-items-start justify-content-between">
+            <div class="col-md-6">
               <h1>PR Campaign Strategic Plan 2025</h1>
               <p>A comprehensive and complex strategic communication plan for the School of Mass Communication 
                 (SMC) at UALR as part of the UALR MCOM 4382 capstone course. The campaign was developed to help 
@@ -56,7 +56,7 @@
             <img src="assets/images/timeline.jpg" alt="woman canoeing on the buffalo river in arkansas">
           </div>
             </div>
-            <div class="wrap col-md-4 scroll-reveal box tag">
+            <div class="d-none d-lg-block col-lg scroll-reveal box tag">
               <img src="assets/images/smc-plan-title-page.jpg" alt="cover page of the SMC strategic plan document">
             </div>
         </div>
