--- a/triumph.html
+++ b/triumph.html
@@ -81,7 +81,7 @@
       </div>
     </article>
 
-    <article class="article-2-triumph">
+    <article class="article-2 triumph-article">
               <div class="row gy-5 gx-5 align-items-start justify-content-between">
         <div class="col-lg-6">
             <div class="box tag">
