--- a/campaign.html
+++ b/campaign.html
@@ -57,7 +57,7 @@
           </div>
             </div>
             <div class="d-none d-lg-block col-lg scroll-reveal box tag">
-              <img src="assets/images/smc-plan-title-page.jpg" alt="cover page of the SMC strategic plan document">
+              <img src="assets/images/smc-plan-title-page.jpg" class ="mobile shadow" alt="cover page of the SMC strategic plan document">
             </div>
         </div>
       </article>
