--- a/projects.html
+++ b/projects.html
@@ -38,13 +38,6 @@
     <section class="web-design-projects">
         <article class="article-1">
         <div class="row gy-5 gx-5 align-items-center justify-content-between">
-            <div class="col-md-5">
-                <h1>WEB DEVELOPMENT & DESIGN</h1>
-                <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
-                    -- Intro to IT & Applications <abbr title="University of Arkansas at Little Rock">UALR</abbr> 
-                </p>
-                <p><q>Design is the intermediary between information and understanding.</q> -- Hans Hoffman, artist and teacher</p>
-            </div>
             <div class="col-md text-center scroll-reveal box tag">
                 <a href="web-buffalo-river.html">
                     <svg version="1.1" id="buffalo-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -161,6 +154,13 @@
                </g>
                </svg>
                 </a>
+            </div>            
+            <div class="col-md-5">
+                <h1>WEB DEVELOPMENT & DESIGN</h1>
+                <p><q>Learning has little meaning unless it produces a sustained and substantial influence on the way people think, act, and feel.</q>
+                    -- Intro to IT & Applications <abbr title="University of Arkansas at Little Rock">UALR</abbr> 
+                </p>
+                <p><q>Design is the intermediary between information and understanding.</q> -- Hans Hoffman, artist and teacher</p>
             </div>
         </div>
     </article>
@@ -172,6 +172,11 @@
     <section class="ualr-project">
         <article class="article-2">
         <div class="row gy-5 gx-5 align-items-center justify-content-between">
+            <div class="col-md-5"><h1>UX DESIGN</h1>
+                <p><q>Mass communication is the process whereby media organizations produce and transmit messages 
+                    to large publics and the process by which those messages are sought, used, understood, and 
+                    influenced by the audience.</q> -- Littlejohn and Foss</p>
+            </div>
             <div class="col-md text-center scroll-reveal box tag">        
                 <a href="triumph.html">
                     <svg id="poscom-svg" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
@@ -201,7 +206,7 @@
 </svg>
                 </a>
             </div>
-<div class="col-md text-center scroll-reveal box tag">        
+            <div class="col-md text-center scroll-reveal box tag">        
                 <a href="campaign.html">
                     <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
   <path d="M231.44,203.87c20.87,0,34.26,2.58,45.34,10.05,18.81,12.62,20.35,32.97,20.35,40.45,0,24.73-15.2,42.76-38.13,47.92l53.58,73.42h-31.69l-49.21-70.33h-4.64v70.33h-26.28v-171.83h30.66ZM227.06,282.7h8.24c7.21,0,36.58-.77,36.58-28.08,0-24.22-22.93-26.53-35.81-26.53h-9.02v54.61Z"/>
@@ -222,11 +227,7 @@
   </g>
 </svg>
                 </a>
-            </div>
-            <div class="col-md-5"><h1>UX DESIGN</h1>
-                <p><q>Make it simple, but significant.</q> -- Don Draper, fictional character on Mad Men</p>
-                <p><q>Design is not just what it looks like and feels like. Design is how it works.</q> -- Steve Jobs, co-founder of Apple, Inc.</p>
-            </div>
+            </div>            
         </div>
         </article>
     </section>
