--- a/index.html
+++ b/index.html
@@ -66,16 +66,11 @@
                         <dl>
                     <dt>UALR (TRIumph Program) // 2024 - 2025</dt>
                     <dd>Research Assistant
-                    <dd>Co-facilitated virtual and in-person workshops in public speaking and positive communication. 
-                        Edited training videos and created digital interactive workbooks and forms.</dd>
+                    <dd>Co-facilitated virtual and in-person workshops for public speaking and positive communication
+                        training. Edited training videos and created digital interactive workbooks and forms.</dd>
                         </dl>
                         
                         <dl>
-                    <dt>UALR (TRIumph Program) // 2024 - 2025</dt>
-                    <dd>Research Assistant
-                    <dd>Co-facilitated virtual and in-person workshops. Edited training videos and created digital 
-                        interactive workbooks and forms.</dd>
-
                     <dt>CARELINK // 2013 - 2019</dt>
                     <dd>Human Resource 2015 - 2019 // Receptionist 2013 - 2015</dd>
                     <dd>Managed employee benefits including health, 401k, workers compensation, and FMLA. Ensured 
