Resume and Projects

--- a/projects.html
+++ b/projects.html
@@ -173,9 +173,9 @@
         <article class="article-2">
         <div class="row gy-5 gx-5 align-items-center justify-content-between">
             <div class="col-md-5"><h1>COMMUNICATION</h1>
-                <p><q>Mass communication is the process whereby media organizations produce and transmit messages 
-                    to large publics and the process by which those messages are sought, used, understood, and 
-                    influenced by the audience.</q> -- Littlejohn and Foss</p>
+                <p><q>Effective communication is crucial for building understanding and connection.</q></p>
+                <p><q>“Communication is not about saying what we think. Communication is about ensuring others hear
+                    what we mean.”</q> -- Simon Sinek</p>
             </div>
             <div class="col-md text-center scroll-reveal box tag">        
                 <a href="campaign.html">
