projects and css

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             </div>
             <div class="col-lg-4 portrait">
              <!--   <img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> -->
-                <img src="assets/images/portrait-sm.jpg 400w" alt="Jupiter"
+                <img class="selfie" src="assets/images/portrait-sm.jpg 400w" alt="Jupiter"
                 srcset="assets/images/temporary-portrait.jpg 1000w, assets/images/portrait-md.jpg 600w, assets/images/portrait-sm.jpg 400w"
                 sizes="(min-width:400px) 30vw, 400w;">
             </div>
