--- a/triumph.html
+++ b/triumph.html
@@ -68,7 +68,7 @@
                 
             Additionally, I developed graphic designs for the Positive Communication Network.
             <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
-             <div class="wrap box tag">
+             <div class="wrap scroll-reveal box tag poscom">
             <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
           </div>
