--- a/triumph.html
+++ b/triumph.html
@@ -63,11 +63,11 @@
                 <li>Tracked and measured TRIumph’s impact after each workshop session using pre- and 
                 post-training surveys and performance evaluations.</li>
                 </ul>
+            Additionally, I developed graphic designs for the Positive Communication Network.
             </dd>
           </dl>
                 
-            Additionally, I developed graphic designs for the Positive Communication Network.
-            <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks</a>.</p>
+            <p><a href="assets/documents/speaking-positively-workbook.pdf">View one of the workbooks<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
              <div class="wrap scroll-reveal box tag poscom">
             <img src="assets/images/building-leadership-resilience.jpg" alt="workbook coverpage titled speaking positively,
           inspiring your audience with your presentation by Julien Mirivel, professor, author, and speaker">
